Bug 310068 - Infinite memory allocation resulting in exhaustion on diagram export
Summary: Infinite memory allocation resulting in exhaustion on diagram export
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: NOR critical
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-14 01:26 UTC by Kip
Modified: 2013-11-02 17:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kip 2012-11-14 01:26:59 UTC
All versions of Umbrello built from source, following, but not including, r1324706, have this problem: Infinite memory allocation resulting in exhaustion on diagram export unless killed quickly.

Here is my project file which exhibits this problem: 
<https://bazaar.launchpad.net/~avaneya/avaneya/trunk/view/head:/Documentation/Contributors/AresEngine/UML/Engine.xmi> 

This is the command I am using to export: 
$ umbrello --export svg Engine.xmi --directory Output

I hope that is helpful.

Reproducible: Always

Steps to Reproduce:
$ umbrello --export svg Engine.xmi --directory Output
Comment 1 Ralf Habacker 2012-11-14 19:58:05 UTC
SVN commit 1325090 by habacker:

Fixed endless loop introduced in revision 1324706.


 M  +0 -11     associationline.cpp  
 M  +0 -2      associationline.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1325090
Comment 2 Kip 2012-11-15 00:21:15 UTC
Thanks Ralph. That appears to have fixed it.