Fixed endless loop introduced in revision 1324706.

BUG: 310068

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1325090